[gd_scene load_steps=5 format=3 uid="uid://bc5sy7kmyvlpa"]

[ext_resource type="Script" uid="uid://b4vn31awjtcgt" path="res://scenes/ui/card_pile_view.gd" id="1_5fd14"]
[ext_resource type="PackedScene" uid="uid://c8aw4ikafti1e" path="res://scenes/ui/card_display.tscn" id="1_bd0ix"]
[ext_resource type="Theme" uid="uid://dh870meh4j8a1" path="res://assets/other/main_theme.tres" id="2_5fd14"]

[sub_resource type="LabelSettings" id="LabelSettings_vf8oq"]
font_size = 26

[node name="CardPileView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5fd14")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.62352943)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Discard Pile"
label_settings = SubResource("LabelSettings_vf8oq")
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="Cards" type="GridContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 15
columns = 6

[node name="CardDisplay" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_bd0ix")]
layout_mode = 2

[node name="CardDisplay2" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_bd0ix")]
layout_mode = 2

[node name="CardDisplay3" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_bd0ix")]
layout_mode = 2

[node name="CardDisplay4" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_bd0ix")]
layout_mode = 2

[node name="CardDisplay5" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_bd0ix")]
layout_mode = 2

[node name="CardDisplay6" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_bd0ix")]
layout_mode = 2

[node name="CardDisplay7" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_bd0ix")]
layout_mode = 2

[node name="CardDisplay8" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_bd0ix")]
layout_mode = 2

[node name="CardDisplay9" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_bd0ix")]
layout_mode = 2

[node name="CardDisplay10" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_bd0ix")]
layout_mode = 2

[node name="CardDisplay11" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_bd0ix")]
layout_mode = 2

[node name="CardDisplay12" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_bd0ix")]
layout_mode = 2

[node name="CardDisplay13" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_bd0ix")]
layout_mode = 2

[node name="CardDisplay14" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_bd0ix")]
layout_mode = 2

[node name="CardDisplay15" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_bd0ix")]
layout_mode = 2

[node name="CardDisplay16" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_bd0ix")]
layout_mode = 2

[node name="CardDisplay17" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_bd0ix")]
layout_mode = 2

[node name="CardDisplay18" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_bd0ix")]
layout_mode = 2

[node name="CardDisplay19" parent="MarginContainer/VBoxContainer/ScrollContainer/Cards" instance=ExtResource("1_bd0ix")]
layout_mode = 2

[node name="BackButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -70.0
offset_top = 11.0
offset_right = -10.0
offset_bottom = 36.0
grow_horizontal = 0
theme = ExtResource("2_5fd14")
text = "Back"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
